--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,7 +43,7 @@ body{
     padding: 4px 12px;
     border: #C5E09B;
     cursor: pointer;
-    width: 100px;
+    width: 85%;
     height: 30px;
 }
 
